<resources>
    <string name="app_name">Movie Time</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="home">Home</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="back_button">Back button</string>
    <string name="search_something">Search something…</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="movie_poster">Movie poster</string>
    <string name="movie_name">Movie name</string>
    <string name="release_date">Release date</string>
    <string name="original_language">Original language</string>
    <string name="overview">Overview</string>
    <string name="movie_saved_successfully">Movie saved successfully</string>
    <string name="movie_deleted_successfully">Movie deleted successfully</string>
    <string name="add_to_favorites_button">Add to favorites button</string>
    <string name="original_title">Original title</string>
    <string name="tv_series_poster">Tv series poster</string>
    <string name="tv_series_name">Tv series name</string>
    <string name="popular_tv_series">Popular TV Series</string>
    <string name="movies">Movies</string>
    <string name="tv_series">TV Series</string>
    <string name="name">Name</string>
    <string name="trending_movies">Trending Movies</string>
    <string name="now_playing">Now Playing</string>
    <string name="trending_tv_series">Trending TV Series</string>
    <string name="airing_today_tv_series">Airing Today TV Series</string>
    <string name="on_the_air_tv_series">On The Air TV Series</string>
</resources>